# pytest-kserve-poc

./: README.md  pyproject.toml
Files/: caikit_tgis_inferenceservice.example.yaml  kubeconfig.example  s3-secret.example.yaml  service_mesh_member.example.yaml  storage-config.example.yaml
kserve-poc/tests/: conftest.py  test_internal_endpoint.py  utils.py
tests/: conftest.py
tests/model_server/kserve/: conftest.py  test_internal_endpoint.py  utils.py
tests/model_server/manifests/: caikit_tgis_servingruntime.yaml
utilities/: constants.py  infra.py
