[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[tool.poetry]
name = "kserve-poc"
version = "0.1.0"
description = ""
authors = ["lugi0 <lgiorgi@redhat.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
openshift-python-wrapper = "^10.0.65"
kubernetes = "^30.1.0"
PyYAML = "^6.0.1"
pytest = "^8.2.2"
openshift-python-utilities = "^5.0.57"
black = "^24.4.2"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
