[tool.poetry]
name = "kserve-poc"
version = "0.1.0"
description = ""
authors = ["lugi0 <lgiorgi@redhat.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openshift-python-wrapper = "^10.0.65"
kubernetes = "^30.1.0"
PyYAML = "^6.0.1"
pytest = "^8.2.2"
openshift-python-utilities = "^5.0.57"
setuptools = "^78.1.1"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
